crates/snow-parser/tests/snapshots/parser_tests__closure_in_pipe_chain.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn main() do\\n  let list = (1, 2, 3)\\n  list |> map(fn x -> x * 2 end)\\nend\")"
---
SOURCE_FILE@0..53
  FN_DEF@0..53
    FN_KW@0..2 "fn"
    NAME@2..6
      IDENT@2..6 "main"
    PARAM_LIST@6..8
      L_PAREN@6..7 "("
      R_PAREN@7..8 ")"
    DO_KW@8..10 "do"
    BLOCK@10..50
      NEWLINE@10..11 "\n"
      LET_BINDING@11..26
        LET_KW@11..14 "let"
        NAME@14..18
          IDENT@14..18 "list"
        EQ@18..19 "="
        TUPLE_EXPR@19..26
          L_PAREN@19..20 "("
          LITERAL@20..21
            INT_LITERAL@20..21 "1"
          COMMA@21..22 ","
          LITERAL@22..23
            INT_LITERAL@22..23 "2"
          COMMA@23..24 ","
          LITERAL@24..25
            INT_LITERAL@24..25 "3"
          R_PAREN@25..26 ")"
      NEWLINE@26..27 "\n"
      PIPE_EXPR@27..49
        NAME_REF@27..31
          IDENT@27..31 "list"
        PIPE@31..33 "|>"
        CALL_EXPR@33..49
          NAME_REF@33..36
            IDENT@33..36 "map"
          ARG_LIST@36..49
            L_PAREN@36..37 "("
            CLOSURE_EXPR@37..48
              FN_KW@37..39 "fn"
              PARAM_LIST@39..40
                PARAM@39..40
                  IDENT@39..40 "x"
              ARROW@40..42 "->"
              BLOCK@42..45
                BINARY_EXPR@42..45
                  NAME_REF@42..43
                    IDENT@42..43 "x"
                  STAR@43..44 "*"
                  LITERAL@44..45
                    INT_LITERAL@44..45 "2"
              END_KW@45..48 "end"
            R_PAREN@48..49 ")"
      NEWLINE@49..50 "\n"
    END_KW@50..53 "end"
  EOF@53..53 ""
