crates/snow-parser/tests/snapshots/parser_tests__closure_missing_end_error.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x -> x + 1\")"
---
SOURCE_FILE@0..8
  CLOSURE_EXPR@0..8
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        IDENT@2..3 "x"
    ARROW@3..5 "->"
    BLOCK@5..8
      BINARY_EXPR@5..8
        NAME_REF@5..6
          IDENT@5..6 "x"
        PLUS@6..7 "+"
        LITERAL@7..8
          INT_LITERAL@7..8 "1"
  EOF@8..8 ""

errors:
  - unclosed closure -- expected `end` @13..13
