crates/snow-parser/tests/snapshots/parser_tests__closure_multi_clause.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn 0 -> 42 | n -> n + 1 end\")"
---
SOURCE_FILE@0..17
  CLOSURE_EXPR@0..17
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        LITERAL_PAT@2..3
          INT_LITERAL@2..3 "0"
    ARROW@3..5 "->"
    BLOCK@5..7
      LITERAL@5..7
        INT_LITERAL@5..7 "42"
    CLOSURE_CLAUSE@7..14
      BAR@7..8 "|"
      PARAM_LIST@8..9
        PARAM@8..9
          IDENT@8..9 "n"
      ARROW@9..11 "->"
      BLOCK@11..14
        BINARY_EXPR@11..14
          NAME_REF@11..12
            IDENT@11..12 "n"
          PLUS@12..13 "+"
          LITERAL@13..14
            INT_LITERAL@13..14 "1"
    END_KW@14..17 "end"
  EOF@17..17 ""
