crates/snow-parser/tests/snapshots/parser_tests__closure_multi_clause_three.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn 0 -> 42 | 1 -> 99 | n -> n + 1 end\")"
---
SOURCE_FILE@0..23
  CLOSURE_EXPR@0..23
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        LITERAL_PAT@2..3
          INT_LITERAL@2..3 "0"
    ARROW@3..5 "->"
    BLOCK@5..7
      LITERAL@5..7
        INT_LITERAL@5..7 "42"
    CLOSURE_CLAUSE@7..13
      BAR@7..8 "|"
      PARAM_LIST@8..9
        PARAM@8..9
          LITERAL_PAT@8..9
            INT_LITERAL@8..9 "1"
      ARROW@9..11 "->"
      BLOCK@11..13
        LITERAL@11..13
          INT_LITERAL@11..13 "99"
    CLOSURE_CLAUSE@13..20
      BAR@13..14 "|"
      PARAM_LIST@14..15
        PARAM@14..15
          IDENT@14..15 "n"
      ARROW@15..17 "->"
      BLOCK@17..20
        BINARY_EXPR@17..20
          NAME_REF@17..18
            IDENT@17..18 "n"
          PLUS@18..19 "+"
          LITERAL@19..20
            INT_LITERAL@19..20 "1"
    END_KW@20..23 "end"
  EOF@23..23 ""
