crates/snow-parser/tests/snapshots/parser_tests__closure_multi_clause_with_guards.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x when x > 0 -> x | x -> 0 - x end\")"
---
SOURCE_FILE@0..23
  CLOSURE_EXPR@0..23
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        IDENT@2..3 "x"
    GUARD_CLAUSE@3..10
      WHEN_KW@3..7 "when"
      BINARY_EXPR@7..10
        NAME_REF@7..8
          IDENT@7..8 "x"
        GT@8..9 ">"
        LITERAL@9..10
          INT_LITERAL@9..10 "0"
    ARROW@10..12 "->"
    BLOCK@12..13
      NAME_REF@12..13
        IDENT@12..13 "x"
    CLOSURE_CLAUSE@13..20
      BAR@13..14 "|"
      PARAM_LIST@14..15
        PARAM@14..15
          IDENT@14..15 "x"
      ARROW@15..17 "->"
      BLOCK@17..20
        BINARY_EXPR@17..20
          LITERAL@17..18
            INT_LITERAL@17..18 "0"
          MINUS@18..19 "-"
          NAME_REF@19..20
            IDENT@19..20 "x"
    END_KW@20..23 "end"
  EOF@23..23 ""
