crates/snow-parser/tests/snapshots/parser_tests__closure_nested_do_end_in_body.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x -> if x > 0 do x else 0 - x end end\")"
---
SOURCE_FILE@0..26
  CLOSURE_EXPR@0..26
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        IDENT@2..3 "x"
    ARROW@3..5 "->"
    BLOCK@5..23
      IF_EXPR@5..23
        IF_KW@5..7 "if"
        BINARY_EXPR@7..10
          NAME_REF@7..8
            IDENT@7..8 "x"
          GT@8..9 ">"
          LITERAL@9..10
            INT_LITERAL@9..10 "0"
        DO_KW@10..12 "do"
        BLOCK@12..13
          NAME_REF@12..13
            IDENT@12..13 "x"
        ELSE_BRANCH@13..23
          ELSE_KW@13..17 "else"
          BLOCK@17..20
            BINARY_EXPR@17..20
              LITERAL@17..18
                INT_LITERAL@17..18 "0"
              MINUS@18..19 "-"
              NAME_REF@19..20
                IDENT@19..20 "x"
          END_KW@20..23 "end"
    END_KW@23..26 "end"
  EOF@26..26 ""
