crates/snow-parser/tests/snapshots/parser_tests__closure_no_params.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn () -> 42 end\")"
---
SOURCE_FILE@0..11
  CLOSURE_EXPR@0..11
    FN_KW@0..2 "fn"
    PARAM_LIST@2..4
      L_PAREN@2..3 "("
      R_PAREN@3..4 ")"
    ARROW@4..6 "->"
    BLOCK@6..8
      LITERAL@6..8
        INT_LITERAL@6..8 "42"
    END_KW@8..11 "end"
  EOF@11..11 ""
