crates/snow-parser/tests/snapshots/parser_tests__closure_pipe_inside_closure_body.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x -> x |> to_string() end\")"
---
SOURCE_FILE@0..22
  CLOSURE_EXPR@0..22
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        IDENT@2..3 "x"
    ARROW@3..5 "->"
    BLOCK@5..19
      PIPE_EXPR@5..19
        NAME_REF@5..6
          IDENT@5..6 "x"
        PIPE@6..8 "|>"
        CALL_EXPR@8..19
          NAME_REF@8..17
            IDENT@8..17 "to_string"
          ARG_LIST@17..19
            L_PAREN@17..18 "("
            R_PAREN@18..19 ")"
    END_KW@19..22 "end"
  EOF@22..22 ""
