crates/snow-parser/tests/snapshots/parser_tests__closure_single_param.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn (x) -> x + 1 end\")"
---
SOURCE_FILE@0..13
  CLOSURE_EXPR@0..13
    FN_KW@0..2 "fn"
    PARAM_LIST@2..5
      L_PAREN@2..3 "("
      PARAM@3..4
        IDENT@3..4 "x"
      R_PAREN@4..5 ")"
    ARROW@5..7 "->"
    BLOCK@7..10
      BINARY_EXPR@7..10
        NAME_REF@7..8
          IDENT@7..8 "x"
        PLUS@8..9 "+"
        LITERAL@9..10
          INT_LITERAL@9..10 "1"
    END_KW@10..13 "end"
  EOF@13..13 ""
