crates/snow-parser/tests/snapshots/parser_tests__closure_tuple_pattern_param.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn (a, b) -> a + b end\")"
---
SOURCE_FILE@0..15
  CLOSURE_EXPR@0..15
    FN_KW@0..2 "fn"
    PARAM_LIST@2..7
      L_PAREN@2..3 "("
      PARAM@3..4
        IDENT@3..4 "a"
      COMMA@4..5 ","
      PARAM@5..6
        IDENT@5..6 "b"
      R_PAREN@6..7 ")"
    ARROW@7..9 "->"
    BLOCK@9..12
      BINARY_EXPR@9..12
        NAME_REF@9..10
          IDENT@9..10 "a"
        PLUS@10..11 "+"
        NAME_REF@11..12
          IDENT@11..12 "b"
    END_KW@12..15 "end"
  EOF@15..15 ""
