crates/snow-parser/tests/snapshots/parser_tests__closure_wildcard_param.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn _ -> 42 end\")"
---
SOURCE_FILE@0..10
  CLOSURE_EXPR@0..10
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        WILDCARD_PAT@2..3
          IDENT@2..3 "_"
    ARROW@3..5 "->"
    BLOCK@5..7
      LITERAL@5..7
        INT_LITERAL@5..7 "42"
    END_KW@7..10 "end"
  EOF@10..10 ""
